manifest/demoteam/custom-health-check/acc/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: custom-health-check
    env: acc
    team: demoteam
  name: custom-health-check
spec:
  template:
    metadata:
      annotations:
        fnatt.io/inject-ca-bundle: enabled
        fnatt.io/inject-ca-env: enabled
      labels:
        team: demoteam
        app: custom-health-check
        env: acc
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - image: nginxinc/nginx-unprivileged:alpine3.22-perl
        livenessProbe:
          periodSeconds: 3
          initialDelaySeconds: 10
          httpGet:
            path: /custom/health-check
            port: 8081
        resources:
          requests:
            cpu: '0.5'
            memory: 512Mi
          limits:
            cpu: '1'
            memory: 1Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
        name: main
        readinessProbe:
          periodSeconds: 3
          initialDelaySeconds: 10
          httpGet:
            path: /custom/health-check
            port: 8081
  selector:
    matchLabels:
      team: demoteam
      app: custom-health-check
      env: acc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: custom-health-check
    env: acc
    team: demoteam
  name: custom-health-check
spec:
  ingressClassName: ingress-nginx-pm
  rules:
  - host: custom-health-check.acc.fnatt.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: custom-health-check
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: custom-health-check
    env: acc
    team: demoteam
  name: custom-health-check
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: custom-health-check
    env: acc
    team: demoteam
